# ToyPathTracer-GAMES101-Assignment7

./: BDPT.cpp  BDPT.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  GGX.hpp  Intersection.hpp  Material.cpp  Material.hpp  Object.hpp  PTVertex.hpp  PathTracer.cpp  PathTracer.hpp  README.md  Random.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  SampleHelperFunctions.cpp  SampleHelperFunctions.hpp  Scene.cpp  Scene.hpp  SceneRenderingHelper.cpp  SceneRenderingHelper.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vector.hpp  global.cpp  global.hpp  main.cpp  stb_image_write.h
